--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,9 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<meta property="og:url" content='{{ "/assets/logo_show.jpg" }}'>
+<meta property="og:image" content='{{ "/assets/logo_show.jpg" }}'>
+<meta property="og:image:width" content="1400">
+<meta property="og:image:height" content="780">
 
 {%- include snippets/get-article-title.html article=page -%}
 <title>{%- if __return -%}{{ __return }} - {{ site.title }}{%- else -%}{{ site.title }}{%- endif -%}</title>
