--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,8 +33,8 @@
               <li class="navigation__item"><a href="{{ _nav_url }}">{%- if _item.title -%}{{ _item.title }}{%- else -%}{{ __return }}{%- endif -%}</a></li>
             {%- endif -%}
           {%- endfor -%}
-          <li class="navigation__item"><a href="https://intro.f-lab.kr" target="_blank"><i class="fas fa-external-link-alt"></i> 홈페이지</a></li>
-          <li class="navigation__item"><a href="https://www.notion.so/F-Lab-07cc5e8e36724c68ae08f64afd93a9df" target="_blank"><i class="fas fa-external-link-alt"></i> 멘토채용</a></li>
+          <li class="navigation__item"><a href="https://3th.f-lab.kr" target="_blank"><i class="fas fa-external-link-alt"></i> 멘토링 모집</a></li>
+          <!--<li class="navigation__item"><a href="https://www.notion.so/F-Lab-07cc5e8e36724c68ae08f64afd93a9df" target="_blank"><i class="fas fa-external-link-alt"></i> 멘토채용</a></li>-->
           {%- if site.search.provider -%}
             <li><button class="button button--secondary button--circle search-button js-search-toggle"><i class="fas fa-search"></i></button></li>
           {%- endif -%}
