Add search console

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
 <meta property="og:image" content='{{ "/assets/logo_show.jpg" }}'>
 <meta property="og:image:width" content="1400">
 <meta property="og:image:height" content="780">
+<meta name="naver-site-verification" content="2d1d09f53dbfbea933358f3bf99ff21f0b8c25ab" />
+<meta name="google-site-verification" content="6icf_G8CtZPyJOY6zQGH-Xq17Rpj2SOBzE3lyBWygf0" />
 
 {%- include snippets/get-article-title.html article=page -%}
 <title>{%- if __return -%}{{ __return }} - {{ site.title }}{%- else -%}{{ site.title }}{%- endif -%}</title>
