조회수 카운트 추가

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -22,6 +22,11 @@ type: article
     {%- include article-section-navigator.html -%}
   </div>
 
+  <div style="text-align: center; margin-top: 50px;">
+    <img
+      src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}.svg"
+    />
+  </div>
 </div>
 
 <script>
